--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,4 +60,6 @@ dependencies {
         transitive = true
     }
     implementation files('libs/YouTubeAndroidPlayerApi.jar')
+
+    implementation 'devs.mulham.horizontalcalendar:horizontalcalendar:1.3.4'
 }
