--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,8 @@
         <activity android:name=".presentation.ui.activities.TicketActivity" />
         <activity android:name=".presentation.ui.activities.MovieTimeActivity" />
         <activity android:name=".presentation.ui.activities.ChangePasswordActivity" />
-        <activity android:name=".presentation.ui.activities.SplashScreenActivity">
+        <activity android:name=".presentation.ui.activities.SplashScreenActivity"
+           >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -30,7 +31,7 @@
         <activity
             android:name=".presentation.ui.activities.MainActivity"
             android:configChanges="orientation|keyboardHidden"
-            android:label=""
+
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustPan|adjustResize" />
         <activity
